[gd_scene load_steps=5 format=3 uid="uid://c4qn1qlt6ejif"]

[ext_resource type="Script" path="res://Scripts/Menu/main_menu.gd" id="1_kjnjn"]
[ext_resource type="AudioStream" uid="uid://cyscqnmdumg56" path="res://Assets/Audio/Menu/Accept5.wav" id="2_dh5ra"]
[ext_resource type="AudioStream" uid="uid://bjb46h286fl4r" path="res://Assets/Audio/Menu/Cancel2.wav" id="3_8kwf0"]
[ext_resource type="AudioStream" uid="uid://2tu10y6e7i6p" path="res://Assets/Audio/Menu/21 - Dungeon.ogg" id="4_bkn8n"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_kjnjn")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GameNameLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 376.0
offset_top = 250.0
offset_right = 776.0
offset_bottom = 290.0
text = "Game Name"

[node name="StartButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 426.0
offset_top = 350.0
offset_right = 726.0
offset_bottom = 425.0
text = "Start"

[node name="ExitButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 426.0
offset_top = 500.0
offset_right = 726.0
offset_bottom = 575.0
text = "Exit"

[node name="Audio" type="Node" parent="."]

[node name="AcceptSFX" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("2_dh5ra")

[node name="ExitSFX" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("3_8kwf0")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_bkn8n")
volume_db = -20.0

[connection signal="pressed" from="Control/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Control/ExitButton" to="." method="_on_exit_button_pressed"]
